# cookiecutter-django-shop

./: .editorconfig  .travis.yml  README.md  README.rst  __main__.py  cookiecutter.json  local.yml  pyproject.toml  tox.ini
docs/: developing-locally-docker.rst  project-generation-options.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter_generation.py  test_docker.sh
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .editorconfig.template  .gitignore  .travis.yml  Pipfile  README.md  README.rst  docker-compose.yml  dumpdata.sh  local.yml  manage.py  package.json  pyproject.toml  pytest.ini  worker.py
{{cookiecutter.project_slug}}/clipboard_initialize_shop/: clipboard_shop_cart-en.json  clipboard_shop_checkout-en.json  clipboard_shop_customer_details-en.json  clipboard_shop_order-en.json  clipboard_shop_order_last-en.json  clipboard_shop_password-en.json  clipboard_shop_password_change-en.json  clipboard_shop_password_reset-en.json  clipboard_shop_register_customer-en.json  clipboard_shop_search_product-en.json
{{cookiecutter.project_slug}}/docker-files/: Dockerfile  databases.environ  entrypoint.sh  sendcloud.environ  stripe.environ  uwsgi.ini  webapp.dockerfile  wsgiapp.dockerfile
{{cookiecutter.project_slug}}/workdir/: .initialize  skeleton.json
{{cookiecutter.project_slug}}/workdir/fixtures/: skeleton.json
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/: __init__.py  admin.py  apps.py  cms_apps.py  cms_wizards.py  filters.py  finders.py  forms.py  models.py  modifiers.py  private_settings.py  search_indexes.py  serializers.py  settings.py  sitemap.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/admin/: i18n_polymorphic.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/admin-weg/: i18n_smartcard.py  manufacturer.py  polymorphic_.py  smartcard.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/fixtures/: skeleton.json
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/management/: serializers.py  translation.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/management/commands/: assign_iconfonts.py  create_footer.py  create_social_icons.py  download_workdir.py  export_products.py  import_products.py  initialize_inventories.py  initialize_shop.py  initialize_shop_demo.py  spinner.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/serializers/: __init__.py  polymorphic.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/static/{{ cookiecutter.app_name }}/css/: _footer.scss  _navbar.scss  _variables.scss  default.scss
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/static/{{ cookiecutter.app_name }}/js/: navbar.js
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/: 403.html  base.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/search/indexes/{{ cookiecutter.app_name }}/: commodity.txt  commodity_autocomplete.txt  commodity_text.txt  smartcard.txt  smartcard_autocomplete.txt  smartcard_text.txt  smartphonemodel.txt  smartphonemodel_autocomplete.txt  smartphonemodel_text.txt
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/cart/: editable.html  static.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/catalog/: commodity-add2cart.html  commodity-detail.html  manufacturer-filter.html  product-detail.html  smartcard-detail.html  smartphone-add2cart.html  smartphonemodel-detail.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/email/: base.html  password-reset-body.html  register-user-body.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/order/: detail.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/pages/: base.html  default.html  error.html  navbar.html  password-reset-confirm.html  test.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/print/: delivery-note.html  invoice.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/products/: cart-product-media.html  catalog-product-media.html  dropdown-product-media.html  email-product-media.html  order-product-media.html  print-product-media.html  search-product-media.html  search-smartcard-media.html  search-smartphonemodel-media.html  watch-product-media.html
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/templates/{{ cookiecutter.app_name }}/search/indexes/: commodity.txt  product.txt  smartcard.txt  smartphonemodel.txt
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/urls/: polymorphic_products.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/urls-weg/: i18n_products.py  simple_products.py
