[tool.poetry]
name = "my-shop"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Haricot"]
#packages = [
#    { include = "/home/np/GIT/shop_path8/django-shop" },

    #{ include = "django-shop" },
#    { include = "extra_package/**/*.py" },
#]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
django = "<2.2"
#djangocms-cascade = "*"
#djangocms-cascade = { git = "https://github.com/jrief/djangocms-cascade", branch = "releases/1.0.x" }
djangocms-cascade =  { git = "https://github.com/haricot/djangocms-cascade.git", branch="patch-33" }
django-compressor = "*"
django-allauth = "*"
django-angular = "*"
django-filer = "*"
django-ipware = "*"
django-sass-processor = "*"
django-select2 = "*"
django-filter = "*"
django-haystack = "*"
drf-haystack = "*"
django-parler = "*"
django-parler-rest = { git = "https://github.com/jrief/django-parler-rest.git", branch="deserialize-TranslatedField" }
psycopg2-binary = "<2.8"
django-redis-cache = "*"
django-redis-sessions = "*"
schedule = "*"
uWSGI = "*"
djangorestframework = "<3.9"
django-rest-auth = "*"
#django_polymorphic = "<2"
django_polymorphic = "*"
django-admin-sortable2 = "*"
django-fsm = "*"
django-fsm-admin = "*"
django-phonenumber-field = "*"
django-post_office = "*"
phonenumbers = "*"
djangocms-bootstrap =  { git = "https://github.com/haricot/djangocms-bootstrap3.git", branch="patch-9" }
elasticsearch = "<1.8"
libsass = "*"
django-shop = { git = "https://github.com/haricot/django-shop.git", branch="patch-9" }
#django-shop = "*"

[dev-packages]
tox = "*"
pytest = "*"
pytest-django = "*"
beautifulsoup4 = "*"
lxml = "*"
factory-boy = "*"
pytest-factoryboy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
