[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
license = "MIT"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
django = "<2.2"
djangocms-cascade =  { git = "https://github.com/jrief/djangocms-cascade.git", branch="releases/1.0.x" }
django-compressor = "*"
django-allauth = "*"
django-angular = "*"
django-filer =  { git = "https://github.com/haricot/django-filer", branch="patch-1" } 
django-ipware = "*"
django-sass-processor = "*"
django-select2 = "*"
django-filter = "*"
django-haystack = "*"
drf-haystack = "*"
django-parler = "*"
django-parler-rest = { git = "https://github.com/jrief/django-parler-rest.git", branch="deserialize-TranslatedField" }
psycopg2-binary = "<2.8"
django-redis-cache = "*"
django-redis-sessions = "*"
schedule = "*"
uWSGI = "*"
djangorestframework = "<3.9"
django-rest-auth = "*"
django_polymorphic = "*"
django-admin-sortable2 = "*"
django-fsm = "*"
django-fsm-admin = "*"
django-phonenumber-field = "*"
django-post_office = "*"
phonenumbers = "*"
djangocms-bootstrap =  { git = "https://github.com/haricot/djangocms-bootstrap3.git", branch="wip_django2" }
elasticsearch = "<1.8"
libsass = "*"
django-shop = { git = "https://github.com/haricot/django-shop.git", branch="wip_django2" }
djangoshop_stripe = "*"
djangoshop_sendcloud = { git = "https://github.com/haricot/djangoshop-sendcloud.git", branch="wip_django2" }

[dev-packages]
tox = "*"
pytest = "*"
pytest-django = "*"
beautifulsoup4 = "*"
lxml = "*"
factory-boy = "*"
pytest-factoryboy = "*"
autopep8 = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
