[tool.poetry]
name = "{{ cookiecutter.project_name|replace(' ', '-') }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
license = "MIT"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
django = "<3"
djangocms-cascade = "*"
{% if cookiecutter.use_compressor == 'y' -%}
django-compressor = "*"
{% endif -%}
django-allauth = "*"
django-angular = "*"
django-filer = "*"
django-ipware = "*"
django-sass-processor = "*"
django-select2 = "*"
django-filter = "*"
django-haystack = "*"
drf-haystack = "*"
{% if cookiecutter.use_i18n == 'y' -%}
django-parler = "*"
django-parler-rest = "*"
{% endif -%}
{% if cookiecutter.dockerize != "n" -%}
psycopg2-binary = "<2.8"
django-redis-cache = "*"
django-redis-sessions = "*"
schedule = "*"
uWSGI = "*"
{% endif -%}
djangorestframework = "*"
django-rest-auth = "*"
django_polymorphic = "*"
django-admin-sortable2 = "*"
django-fsm = "*"
django-fsm-admin = "*"
django-phonenumber-field = "*"
django-post_office = "*"
phonenumbers = "*"
djangocms-bootstrap = "*"
elasticsearch = "<1.8"
libsass = "*"
django-shop = "<1.2"
{% if cookiecutter.use_stripe == 'y' -%}
djangoshop-stripe = "*"  {# "{{ cookiecutter.version }}" #}
stripe = "<1.54"
{% endif -%}
{% if cookiecutter.use_paypal == 'y' -%}
djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
paypalrestsdk = "<2"
{% endif -%}
{% if cookiecutter.use_sendcloud == 'y' -%}
djangoshop-sendcloud = "*"  {# "{{ cookiecutter.version }}" #}
{% endif -%}

[dev-packages]
tox = "*"
pytest = "*"
pytest-django = "*"
beautifulsoup4 = "*"
lxml = "*"
factory-boy = "*"
pytest-factoryboy = "*"
autopep8 = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
